--- a/app/src/main/res/layout/activity_schedule_detail.xml
+++ b/app/src/main/res/layout/activity_schedule_detail.xml
@@ -63,6 +63,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
+        app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
@@ -74,11 +75,74 @@
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                tools:srcCompat="@drawable/image_schedule" />
+
+            <TextView
+                android:id="@+id/txtNameSchedule"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Regional Qualifier - Valorant"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+            <TextView
+                android:id="@+id/txtDescSchedule"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="24dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/btnLike"
+                app:layout_constraintEnd_toEndOf="@+id/txtTeam"
+                app:layout_constraintStart_toStartOf="@+id/txtTeam"
+                app:layout_constraintTop_toBottomOf="@+id/txtTeam" />
+
+            <TextView
+                android:id="@+id/txtTeam"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="TEAM A"
+                android:textColor="#999999"
+                app:layout_constraintEnd_toEndOf="@+id/txtPlace"
+                app:layout_constraintStart_toStartOf="@+id/txtPlace"
+                app:layout_constraintTop_toBottomOf="@+id/txtPlace" />
+
+            <TextView
+                android:id="@+id/txtPlace"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Los Angeles, CA (10.00 AM)"
+                android:textColor="#999999"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/txtNameSchedule"
+                app:layout_constraintStart_toStartOf="@+id/txtNameSchedule"
+                app:layout_constraintTop_toBottomOf="@+id/txtNameSchedule" />
+
+            <Button
+                android:id="@+id/btnLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="32dp"
+                android:backgroundTint="#043170"
+                android:text="Button"
+                app:icon="@drawable/icon_like"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
