--- a/app/src/main/res/layout/activity_schedule_detail.xml
+++ b/app/src/main/res/layout/activity_schedule_detail.xml
@@ -6,7 +6,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScheduleDetail">
+    tools:context=".OurScheduleDetailActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -66,7 +66,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
+        android:layout_marginBottom="64dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,81 +76,78 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@drawable/image_schedule" />
 
             <TextView
                 android:id="@+id/txtNameSchedule"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Regional Qualifier - Valorant"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-            <TextView
-                android:id="@+id/txtDescSchedule"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="24dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="TextView"
-                app:layout_constraintBottom_toTopOf="@+id/btnLike"
-                app:layout_constraintEnd_toEndOf="@+id/txtTeam"
-                app:layout_constraintStart_toStartOf="@+id/txtTeam"
-                app:layout_constraintTop_toBottomOf="@+id/txtTeam" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/txtTeam"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginRight="24dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="TEAM A"
-                android:textColor="#999999"
-                app:layout_constraintEnd_toEndOf="@+id/txtPlace"
-                app:layout_constraintStart_toStartOf="@+id/txtPlace"
-                app:layout_constraintTop_toBottomOf="@+id/txtPlace" />
+                android:textColor="#525252" />
 
             <TextView
                 android:id="@+id/txtPlace"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Los Angeles, CA (10.00 AM)"
-                android:textColor="#999999"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/txtNameSchedule"
-                app:layout_constraintStart_toStartOf="@+id/txtNameSchedule"
-                app:layout_constraintTop_toBottomOf="@+id/txtNameSchedule" />
+                android:textColor="#525252"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/txtDescSchedule"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="24dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="TextView" />
 
             <Button
-                android:id="@+id/btnLike"
+                android:id="@+id/btnNotif"
+                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="32dp"
-                android:backgroundTint="#043170"
-                android:text="Button"
-                app:icon="@drawable/icon_like"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:backgroundTint="#00043170"
+                android:text="Notify Me"
+                android:textColor="#043170"
+                android:textColorLink="#032049"
+                app:icon="@drawable/baseline_notifications_24"
+                app:iconTint="#043170"
+                app:strokeColor="#043170" />
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
