--- a/app/src/main/res/layout/activity_what_we_play.xml
+++ b/app/src/main/res/layout/activity_what_we_play.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OurScheduleActivity">
+    tools:context=".WhatWePlayActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -32,21 +32,6 @@
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <ImageButton
-        android:id="@+id/btnhome"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:background="@null"
-        android:contentDescription="Home"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/baseline_home_24"
-        app:tint="#FFFFFF" />
-
-    <ImageButton
         android:id="@+id/btnProfille"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -61,23 +46,27 @@
         app:srcCompat="@drawable/baseline_person_24"
         app:tint="#FFFFFF" />
 
-    <ListView
-        android:id="@+id/lvSchedule"
-        android:layout_width="409dp"
-        android:layout_height="665dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnScheduleDetail" />
+    <ImageButton
+        android:id="@+id/btnhome"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:background="@null"
+        android:contentDescription="Home"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/baseline_home_24"
+        app:tint="#FFFFFF" />
 
-    <Button
-        android:id="@+id/btnScheduleDetail"
+    <TextView
+        android:id="@+id/txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="click here to see projek schedule detail"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
