--- a/app/src/main/res/layout/activity_who_we_are.xml
+++ b/app/src/main/res/layout/activity_who_we_are.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WhoWeAre">
+    tools:context=".WhoWeAreActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -80,6 +80,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins_bold"
         android:text="Who Are We"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -87,9 +88,9 @@
         android:id="@+id/txtWhoAreWe"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="12dp"
+        android:fontFamily="@font/poppins_regular"
         android:text="Lorem Ipsum"
         app:layout_constraintBottom_toTopOf="@+id/btnLike"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,13 +99,17 @@
 
     <Button
         android:id="@+id/btnLike"
+        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="32dp"
-        android:backgroundTint="#043170"
-        android:text="Button"
+        android:layout_marginBottom="90dp"
+        android:text="0"
+        android:textColor="#043170"
+        android:textColorLink="#043170"
         app:icon="@drawable/icon_like"
+        app:iconTint="#043170"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:strokeColor="#043170" />
 </androidx.constraintlayout.widget.ConstraintLayout>
