--- a/app/src/main/res/layout/activity_schedule_detail.xml
+++ b/app/src/main/res/layout/activity_schedule_detail.xml
@@ -106,7 +106,7 @@
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginRight="24dp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_regular"
                 android:text="TEAM A"
                 android:textColor="#525252" />
 
@@ -116,7 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
                 android:layout_marginRight="24dp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Los Angeles, CA (10.00 AM)"
                 android:textColor="#525252"
                 android:textSize="14sp" />
@@ -129,7 +129,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="24dp"
                 android:layout_marginBottom="24dp"
-                android:fontFamily="@font/poppins_medium"
+                android:fontFamily="@font/poppins_regular"
                 android:text="TextView" />
 
             <Button
