--- a/app/src/main/res/layout/activity_schedule_detail.xml
+++ b/app/src/main/res/layout/activity_schedule_detail.xml
@@ -86,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:scaleType="centerCrop"
+                app:srcCompat="@drawable/image_schedule"
                 tools:srcCompat="@drawable/image_schedule" />
 
             <TextView
