--- a/app/src/main/res/layout/activity_what_we_play.xml
+++ b/app/src/main/res/layout/activity_what_we_play.xml
@@ -5,7 +5,102 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignWithParentIfMissing="false"
     tools:context=".WhatWePlayActivity">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="64dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="98dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/valorant_image"
+                tools:srcCompat="@drawable/valorant_image" />
+
+            <TextView
+                android:id="@+id/txtNameSchedule"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="VALORANT"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/txtTeam"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginRight="24dp"
+                android:fontFamily="@font/poppins_regular"
+                android:text="VALORANT is a tactical first-person shooter from Riot Games that combines precise gunplay with unique character abilities. Players engage in strategic, team-based matches where that must complete objectives and outsmart opponents to win."
+                android:textColor="#525252" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnAchievement"
+                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="32dp"
+                    android:backgroundTint="#00043170"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Achievement"
+                    android:textAlignment="center"
+                    android:textColor="#043170"
+                    android:textColorLink="#032049"
+                    app:iconTint="#043170"
+                    app:strokeColor="#043170" />
+
+                <Button
+                    android:id="@+id/btnNotif"
+                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginBottom="32dp"
+                    android:backgroundTint="#00043170"
+                    android:text="Team"
+                    android:textAlignment="center"
+                    android:textColor="#043170"
+                    android:textColorLink="#032049"
+                    app:iconTint="#043170"
+                    app:strokeColor="#043170" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/imageView"
