--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -8,6 +8,50 @@
     android:layout_height="match_parent"
     tools:context=".AchievementActivity">
 
+  <TextView
+      android:id="@+id/textView6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="124dp"
+      android:layout_marginEnd="307dp"
+      android:layout_marginBottom="16dp"
+      android:fontFamily="@font/poppins_bold"
+      android:text="VALORANT"
+      android:textSize="16sp"
+      app:layout_constraintBottom_toTopOf="@+id/txtAchievement"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+  <Spinner
+      android:id="@+id/comboBoxYear"
+      android:layout_width="380dp"
+      android:layout_height="42dp"
+      android:layout_marginStart="17dp"
+      android:layout_marginTop="50dp"
+      android:layout_marginEnd="14dp"
+      android:layout_marginBottom="335dp"
+      android:backgroundTint="#032C64"
+      android:outlineProvider="bounds"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView6"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <ImageView
+      android:id="@+id/imageView6"
+      android:layout_width="wrap_content"
+      android:layout_height="232dp"
+      android:scaleType="fitXY"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView"
+      app:srcCompat="@drawable/valorant" />
+
   <ImageView
       android:id="@+id/imageView"
       android:layout_width="0dp"
@@ -61,4 +105,33 @@
       app:layout_constraintVertical_bias="1.0"
       app:srcCompat="@drawable/baseline_home_24"
       app:tint="#FFFFFF" />
+
+  <TextView
+      android:id="@+id/textView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="17dp"
+      android:layout_marginTop="21dp"
+      android:layout_marginEnd="362dp"
+      android:layout_marginBottom="10dp"
+      android:text="Year:"
+      app:layout_constraintBottom_toTopOf="@+id/comboBoxYear"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+  <TextView
+      android:id="@+id/txtAchievement"
+      android:layout_width="373dp"
+      android:layout_height="220dp"
+      android:layout_marginStart="17dp"
+      android:layout_marginTop="168dp"
+      android:layout_marginEnd="21dp"
+      android:layout_marginBottom="39dp"
+      android:text="macam macam achievement"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
