--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -13,16 +13,17 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="124dp"
+      android:layout_marginTop="37dp"
       android:layout_marginEnd="307dp"
-      android:layout_marginBottom="16dp"
       android:fontFamily="@font/poppins_bold"
       android:text="VALORANT"
       android:textSize="16sp"
-      app:layout_constraintBottom_toTopOf="@+id/txtAchievement"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+      app:layout_constraintTop_toBottomOf="@+id/comboBoxYear"
+      app:layout_constraintVertical_bias="0.018" />
 
   <Spinner
       android:id="@+id/comboBoxYear"
@@ -125,13 +126,13 @@
       android:layout_width="373dp"
       android:layout_height="220dp"
       android:layout_marginStart="17dp"
-      android:layout_marginTop="168dp"
       android:layout_marginEnd="21dp"
-      android:layout_marginBottom="39dp"
       android:text="macam macam achievement"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+      app:layout_constraintTop_toBottomOf="@+id/textView6"
+      app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
