--- a/app/src/main/res/layout/activity_what_we_play.xml
+++ b/app/src/main/res/layout/activity_what_we_play.xml
@@ -65,8 +65,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recGame"
         android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
