--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -39,7 +39,7 @@
       app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
   <ImageView
-      android:id="@+id/imageView6"
+      android:id="@+id/imgGame"
       android:layout_width="wrap_content"
       android:layout_height="232dp"
       android:scaleType="fitXY"
@@ -114,7 +114,7 @@
       android:text="Year:"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+      app:layout_constraintTop_toBottomOf="@+id/imgGame" />
 
   <TextView
       android:id="@+id/txtAchievement"
