--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -9,7 +9,7 @@
     tools:context=".AchievementActivity">
 
   <TextView
-      android:id="@+id/txtNameGame"
+      android:id="@+id/txtNameTeam"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="48dp"
@@ -40,7 +40,7 @@
 
   <ImageView
       android:id="@+id/imgGame"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="232dp"
       android:scaleType="centerCrop"
       app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +129,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/txtNameGame"
+      app:layout_constraintTop_toBottomOf="@+id/txtNameTeam"
       app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
