--- a/app/src/main/res/layout/schedules_list.xml
+++ b/app/src/main/res/layout/schedules_list.xml
@@ -26,7 +26,7 @@
 
             <ImageView
                 android:id="@+id/imgGameSchedule"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="125dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/valorant_image"
